update controller check validator
