# cmd/swag/docs/swagger.json
@@ -1170,6 +1170,11 @@
         },
         "model.RoleAccount": {
             "type": "object",
+            "required": [
+                "account_id",
+                "license_id",
+                "role_id"
+            ],
             "properties": {
                 "account_id": {
                     "type": "string",
