# internal/model/role_account.go
@@ -3,9 +3,9 @@ package model
 import "time"
 
 type RoleAccount struct {
-	Account_id string `json:"account_id" example:"b16fdfbc-da22-4ab2-b045-614677e536d6"`
-	Role_id    string `json:"role_id" example:"351ec27d-2134-4993-b120-b72a950f5574"`
-	License_id string `json:"license_id" example:"xxx-yyyy-zzz"`
+	Account_id string `json:"account_id" binding:"required" example:"b16fdfbc-da22-4ab2-b045-614677e536d6"`
+	Role_id    string `json:"role_id" binding:"required" example:"351ec27d-2134-4993-b120-b72a950f5574"`
+	License_id string `json:"license_id" binding:"required" example:"xxx-yyyy-zzz"`
 }
 type RoleAccountOutput struct {
 	Id string `json:"id"`
